--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   "homepage": "",
   "dependencies": {
     "bootstrap": "~3.3.6",
-    "hammerjs": "^2.0.8"
+    "hammerjs": "^2.0.8",
+    "slick-carousel": "^1.6.0"
   }
 }
